# deepseek-chat-python

./: .env.example  .gitignore  README.md  doc.txt  install.sh  pyproject.toml
deepseek_chat/: __init__.py  cli.py  client.py  deepseek.py  env_sync.py  logging_config.py  login.py  session_store.py  tui.py
deepseek_chat/settings/: system.md
tools/: __init__.py  code.py  command.py  context.py  filesystem.py  project.py  registry.py  searxng.py  utility.py
