[project]
name = "deepseek-chat"
version = "0.1.0"
description = "Minimal Python CLI for DeepSeek web chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "wasmtime>=20.0.0",
]

[project.scripts]
deepseek-chat = "deepseek_chat.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
