[project]
name = "deepseek-chat"
version = "0.1.0"
description = "Minimal Python CLI for DeepSeek web chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "playwright>=1.44.0",
  "python-dotenv>=1.0.1",
  "textual>=0.86.0",
  "wasmtime>=20.0.0",
]

[project.scripts]
deepseek = "deepseek_chat.deepseek:main"
deepseek-chat = "deepseek_chat.cli:main"
deepseek-chat-login = "deepseek_chat.login:main"
deepseek-chat-tui = "deepseek_chat.tui:main"

[tool.setuptools.packages.find]
include = ["deepseek_chat*", "tools*"]

[tool.setuptools.package-data]
deepseek_chat = ["settings/*.md"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
